--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
                 <select id="vaccine">
                   <option>Pfizer</option>
                   <option>Moderna</option>
-                  <option>Johnson & Johnson</option>
+                  <option>Johnson &amp; Johnson</option>
                 </select>
               </td>
             </tr>
