Added documentation, removed API endpoint, modified values

--- a/public/index.html
+++ b/public/index.html
@@ -6,13 +6,15 @@
   * TA: Ludvig Liljenberg, Marina Wooden
   * 2/25/22
   * Creative Project #4:
-  * Description:
+  * Description: The structure of the page for the Vaccine Appointment Finder.
+  * Provides users with a way of searching for cities with available vaccines
+  * or vaccine amounts by city.
   ***
 -->
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Vaccine Scheduler</title>
+  <title>Vaccine Appointment Finder</title>
   <link href="styles.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;900&display=swap" rel="stylesheet">
   <script src="index.js"></script>
@@ -23,7 +25,7 @@
     <section class="tab-panel">
       <p id="top-copy">
         Use the form below to find an appointment by vaccine type or by city.
-        If searching in all cities, input 'all'.
+        Available cities to search for: Bellevue, Kent, Renton, Seattle
       </p>
 
       <ul id="tabs">
