--- a/public/index.html
+++ b/public/index.html
@@ -76,5 +76,6 @@
       <p>Unexpected error occurred. Please try searching again.</p>
     </section>
   </div>
+  <p>Uses the Vaccine API</p>
 </body>
 </html>
